Add more space between text and typer effect

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <span class="title-line highlight">Glairozz Blair Punay</span>
                     </h1>
                     <div class="hero-subtitle">
-                        <span style="color: white;">I am a</span> <span class="typewriter" data-text="Aspiring Software Engineer | Fullstack Developer | Creative Problem Solver | Lifelong Learner"></span>
+                        <span style="color: white;">I am a</span>&nbsp;&nbsp;<span class="typewriter" data-text="Aspiring Software Engineer | Fullstack Developer | Creative Problem Solver | Lifelong Learner"></span>
                     </div>
                     <p class="hero-description">
                         1st-year aspiring software engineer who loves diving into new ideas, building things from scratch, and figuring out how technology actually works behind the scenes.
