--- a/index.html
+++ b/index.html
@@ -215,19 +215,19 @@
 
                     <div class="about-stats">
                         <div class="stat-item">
-                            <div class="stat-number" data-target="50">0</div>
+                            <div class="stat-number" data-target="10">0</div>
                             <div class="stat-label">Projects Completed</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" data-target="15">0</div>
-                            <div class="stat-label">Technologies Mastered</div>
+                            <div class="stat-number" data-target="9">0</div>
+                            <div class="stat-label">Tech Mastered</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" data-target="100">0</div>
+                            <div class="stat-number" data-target="2">0</div>
                             <div class="stat-label">Happy Clients</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" data-target="5">0</div>
+                            <div class="stat-number" data-target="2">0</div>
                             <div class="stat-label">Years Experience</div>
                         </div>
                     </div>
