--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <h2>Glairozz
+                    <h2 id="name">Glairozz
                         </>
                 </div>
 
