Improve mobile responsiveness and add new loading screen with particles

--- a/index.html
+++ b/index.html
@@ -37,53 +37,21 @@
 </head>
 
 <body>
-    <!-- Loading Screen -->
-    <div id="loading-screen" class="loading-screen">
-        <div class="loading-particles" id="loading-particles"></div>
-        <div class="loading-content">
-            <div class="loading-logo">
-                <h1 class="loading-text">
-                    <span class="letter" style="animation-delay: 0.0s"><</span>
-                    <span class="letter" style="animation-delay: 0.1s">/</span>
-                    <span class="letter" style="animation-delay: 0.2s">></span>
-                    <span class="letter" style="animation-delay: 0.3s">g</span>
-                    <span class="letter" style="animation-delay: 0.4s">l</span>
-                    <span class="letter" style="animation-delay: 0.5s">a</span>
-                    <span class="letter" style="animation-delay: 0.6s">i</span>
-                    <span class="letter" style="animation-delay: 0.7s">r</span>
-                    <span class="letter" style="animation-delay: 0.8s">o</span>
-                    <span class="letter" style="animation-delay: 0.9s">z</span>
-                    <span class="letter" style="animation-delay: 1.0s">z</span>
-                </h1>
-            </div>
-            <div class="loading-bar-container">
-                <div class="loading-bar">
-                    <div class="loading-progress"></div>
-                </div>
-            </div>
-            <div class="loading-percentage">0%</div>
-            <div class="loading-subtitle">
-                <span class="subtitle-letter" style="animation-delay: 1.2s">g</span>
-                <span class="subtitle-letter" style="animation-delay: 1.3s">l</span>
-                <span class="subtitle-letter" style="animation-delay: 1.4s">a</span>
-                <span class="subtitle-letter" style="animation-delay: 1.5s">i</span>
-                <span class="subtitle-letter" style="animation-delay: 1.6s">r</span>
-                <span class="subtitle-letter" style="animation-delay: 1.7s">o</span>
-                <span class="subtitle-letter" style="animation-delay: 1.8s">z</span>
-                <span class="subtitle-letter" style="animation-delay: 1.9s">z</span>
-                <span class="subtitle-letter" style="animation-delay: 2.0s"> </span>
-                <span class="subtitle-letter" style="animation-delay: 2.1s">b</span>
-                <span class="subtitle-letter" style="animation-delay: 2.2s">l</span>
-                <span class="subtitle-letter" style="animation-delay: 2.3s">a</span>
-                <span class="subtitle-letter" style="animation-delay: 2.4s">i</span>
-                <span class="subtitle-letter" style="animation-delay: 2.5s">r</span>
-                <span class="subtitle-letter" style="animation-delay: 2.6s"> </span>
-                <span class="subtitle-letter" style="animation-delay: 2.7s">p</span>
-                <span class="subtitle-letter" style="animation-delay: 2.8s">u</span>
-                <span class="subtitle-letter" style="animation-delay: 2.9s">n</span>
-                <span class="subtitle-letter" style="animation-delay: 3.0s">a</span>
-                <span class="subtitle-letter" style="animation-delay: 3.1s">y</span>
-            </div>
+    <!-- New Loading Screen -->
+    <canvas id="particles-canvas"></canvas>
+    <div id="loading-screen">
+        <h2 id="user-name">
+            <span>G</span><span>l</span><span>a</span><span>i</span><span>r</span><span>o</span><span>z</span><span>z</span>
+            <span class="space"></span>
+            <span>B</span><span>l</span><span>a</span><span>i</span><span>r</span>
+            <span class="space"></span>
+            <span>P</span><span>.</span>
+            <span class="space"></span>
+            <span>P</span><span>u</span><span>n</span><span>a</span><span>y</span>
+        </h2>
+        <p class="status-text">Aspiring Software Engineer</p>
+        <div class="loading-bar">
+            <div id="bar-fill"></div>
         </div>
     </div>
 
@@ -132,7 +100,7 @@
     </header>
 
     <!-- Main Content -->
-    <main class="main">
+    <main class="main" style="display: none;">
         <!-- Hero Section -->
         <section id="home" class="hero">
             <div class="hero-content">
