--- a/index.html
+++ b/index.html
@@ -702,15 +702,15 @@
                                 </div>
                             </div>
 
-                            <div class="contact-item">
-                                <div class="contact-icon">
-                                    <i class="fas fa-map-marker-alt"></i>
-                                </div>
-                                <div class="contact-text">
-                                    <h4>Location</h4>
-                                    <span>Your City, Country</span>
-                                </div>
+                        <div class="contact-item">
+                            <div class="contact-icon">
+                                <i class="fas fa-map-marker-alt"></i>
                             </div>
+                            <div class="contact-text">
+                                <h4>Location</h4>
+                                <span>Philippines</span>
+                            </div>
+                        </div>
                         </div>
 
                         <div class="social-links">
