Add ASCII Portrait Generator project to web development section

--- a/index.html
+++ b/index.html
@@ -479,6 +479,14 @@
                         </p>
                     </div>
 
+                    <div class="project-item" data-category="web-development">
+                        <img src="./assets/images/projects/portrait generator.png" alt="ASCII Portrait Generator">
+                        <a href="https://glairozz.github.io/ASCII_PortraitGenerator/"><strong>ASCII Portrait Generator</strong></a>
+                        <p>
+                            An interactive web tool that converts images into ASCII art portraits. Built with HTML, CSS, and JavaScript, it allows users to upload images and transform them into creative ASCII text representations with customizable settings.
+                        </p>
+                    </div>
+
                     <!-- Game Development Projects -->
                     <div class="project-item" data-category="game-development">
                         <img src="./assets/images/projects/egd.png" alt="Ethan's Great Dungeon">
