Add three new projects: Valentines Invitation Letter, Space Shooter, and PyChess
- Add Valentines Invitation Letter to Web Development projects
- Add Space Shooter and PyChess to Game Development projects
- Include project images and GitHub links
- Update certificate dates to current year

--- a/index.html
+++ b/index.html
@@ -487,6 +487,14 @@
                         </p>
                     </div>
 
+                    <div class="project-item" data-category="web-development">
+                        <img src="./assets/images/projects/valentines inv letter.png" alt="Valentines Invitation Letter">
+                        <a href="https://glairozz.github.io/ValentinesInvitationLetter/"><strong>Valentines Invitation Letter</strong></a>
+                        <p>
+                            A romantic and interactive Valentine's Day invitation letter website. Built with modern web technologies to create an engaging and personalized experience for special occasions.
+                        </p>
+                    </div>
+
                     <!-- Game Development Projects -->
                     <div class="project-item" data-category="game-development">
                         <img src="./assets/images/projects/egd.png" alt="Ethan's Great Dungeon">
@@ -517,6 +525,22 @@
                         <a href="https://glairozz.github.io/Rubic-Cube/"><strong>Rubics Cube</strong></a>
                         <p>
                             A virtual Rubik's Cube simulator developed using Python and Pygame. Allows users to manipulate and solve the cube with intuitive controls.
+                        </p>
+                    </div>
+
+                    <div class="project-item" data-category="game-development">
+                        <img src="./assets/images/projects/pyshooter.png" alt="Space Shooter">
+                        <a href="https://github.com/Glairozz/PygameSpaceShooter"><strong>Space Shooter</strong></a>
+                        <p>
+                            An exciting space shooter arcade game built with Python and Pygame. Features multiple enemy types, power-ups, and challenging levels with smooth gameplay mechanics.
+                        </p>
+                    </div>
+
+                    <div class="project-item" data-category="game-development">
+                        <img src="./assets/images/projects/pychess.png" alt="PyChess">
+                        <a href="https://github.com/Glairozz/python-chess"><strong>PyChess</strong></a>
+                        <p>
+                            A fully functional chess game implementation in Python. Features complete chess rules, AI opponent, and an intuitive graphical interface for playing classic chess matches.
                         </p>
                     </div>
 
@@ -557,7 +581,7 @@
                             <div class="certificate-content">
                                 <h4 class="certificate-title">Programming for Everybody (Python)</h4>
                                 <p class="certificate-issuer">University of Michigan</p>
-                                <p class="certificate-date">Issued: 2024</p>
+                                <p class="certificate-date">Issued: 2025</p>
                                 <a href="https://www.coursera.org/learn/python/home/module/1" class="certificate-link" target="_blank">View Certificate <i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
@@ -569,7 +593,7 @@
                             <div class="certificate-content">
                                 <h4 class="certificate-title">Introduction to Computers</h4>
                                 <p class="certificate-issuer">Coursera</p>
-                                <p class="certificate-date">Issued: 2024</p>
+                                <p class="certificate-date">Issued: 2025</p>
                                 <a href="https://www.coursera.org/learn/introduction-to-computers/home/welcome" class="certificate-link" target="_blank">View Certificate <i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
@@ -581,7 +605,7 @@
                             <div class="certificate-content">
                                 <h4 class="certificate-title">Hello Python: Introduction to Programming</h4>
                                 <p class="certificate-issuer">Coursera</p>
-                                <p class="certificate-date">Issued: 2024</p>
+                                <p class="certificate-date">Issued: 2025</p>
                                 <a href="#" class="certificate-link" target="_blank">View Certificate <i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
@@ -593,7 +617,7 @@
                             <div class="certificate-content">
                                 <h4 class="certificate-title">Functions and Conditional Statements</h4>
                                 <p class="certificate-issuer">Coursera</p>
-                                <p class="certificate-date">Issued: 2024</p>
+                                <p class="certificate-date">Issued: 2025</p>
                                 <a href="#" class="certificate-link" target="_blank">View Certificate <i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
@@ -605,7 +629,7 @@
                             <div class="certificate-content">
                                 <h4 class="certificate-title">Loops and Strings in Python</h4>
                                 <p class="certificate-issuer">Coursera</p>
-                                <p class="certificate-date">Issued: 2024</p>
+                                <p class="certificate-date">Issued: 2025</p>
                                 <a href="#" class="certificate-link" target="_blank">View Certificate <i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
@@ -617,7 +641,7 @@
                             <div class="certificate-content">
                                 <h4 class="certificate-title">Python Basics: Selection and Iteration</h4>
                                 <p class="certificate-issuer">Coursera</p>
-                                <p class="certificate-date">Issued: 2024</p>
+                                <p class="certificate-date">Issued: 2026</p>
                                 <a href="https://www.coursera.org/learn/codio-python-basics/home/module/1" class="certificate-link" target="_blank">View Certificate <i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
@@ -629,7 +653,7 @@
                             <div class="certificate-content">
                                 <h4 class="certificate-title">Python Basic Structures: Lists, Strings, and Files</h4>
                                 <p class="certificate-issuer">Coursera</p>
-                                <p class="certificate-date">Issued: 2024</p>
+                                <p class="certificate-date">Issued: 2026</p>
                                 <a href="https://www.coursera.org/learn/python-basic-structures-lists-strings-and-files/home/module/1" class="certificate-link" target="_blank">View Certificate <i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
@@ -641,7 +665,7 @@
                             <div class="certificate-content">
                                 <h4 class="certificate-title">Python Game Development with Pygame</h4>
                                 <p class="certificate-issuer">Coursera</p>
-                                <p class="certificate-date">Issued: 2024</p>
+                                <p class="certificate-date">Issued: 2026</p>
                                 <a href="https://www.coursera.org/learn/python-game-development-with-pygame/home/module/1" class="certificate-link" target="_blank">View Certificate <i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
@@ -653,7 +677,7 @@
                             <div class="certificate-content">
                                 <h4 class="certificate-title">Introduction to Frontend Development</h4>
                                 <p class="certificate-issuer">Meta</p>
-                                <p class="certificate-date">Issued: 2024</p>
+                                <p class="certificate-date">Issued: 2026</p>
                                 <a href="https://www.coursera.org/learn/introduction-to-front-end-development/home/week/1" class="certificate-link" target="_blank">View Certificate <i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
@@ -665,7 +689,7 @@
                             <div class="certificate-content">
                                 <h4 class="certificate-title">Data Structures</h4>
                                 <p class="certificate-issuer">Coursera</p>
-                                <p class="certificate-date">Issued: 2024</p>
+                                <p class="certificate-date">Issued: 2026</p>
                                 <a href="#" class="certificate-link" target="_blank">View Certificate <i class="fas fa-external-link-alt"></i></a>
                             </div>
                         </div>
