--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <h2 id="name">Glairozz
-                        </>
+                    <h2 id="name">Glairozz</h2>
                 </div>
 
                 <div class="nav-menu" id="nav-menu">
@@ -183,7 +182,7 @@
 
                     <div class="about-stats">
                         <div class="stat-item">
-                            <div class="stat-number" data-target="10">0</div>
+                            <div class="stat-number" data-target="14">0</div>
                             <div class="stat-label">Projects Completed</div>
                         </div>
                         <div class="stat-item">
@@ -734,15 +733,15 @@
                                 </div>
                             </div>
 
-                        <div class="contact-item">
-                            <div class="contact-icon">
-                                <i class="fas fa-map-marker-alt"></i>
+                            <div class="contact-item">
+                                <div class="contact-icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                </div>
+                                <div class="contact-text">
+                                    <h4>Location</h4>
+                                    <span>Philippines</span>
+                                </div>
                             </div>
-                            <div class="contact-text">
-                                <h4>Location</h4>
-                                <span>Philippines</span>
-                            </div>
-                        </div>
                         </div>
 
                         <div class="social-links">
