--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
                     <div class="contact-form">
                         <form id="contact-form" class="form">
                             <div class="form-group">
-                                <input type="text" id="name" name="name" class="form-input" placeholder="Your Name" required>
+                                <input type="text" id="formname" name="formname" class="form-input" placeholder="Your Name" required>
                             </div>
 
                             <div class="form-group">
